<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_header">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="back">Назад</string>
    <string name="night_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="eula">Пользовательское соглашение</string>
    <string name="eula_uri">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_uri">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_title">Android-разработка от Яндекс Практикума</string>
    <string name="contact_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="contact_subj">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="contact_from">svetlana010785@yandex.ru</string>
    <string name="track_description_placeholder">Артист \u2022 время</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_connetion">Проблема со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear_search">Очистить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="u_searched">Вы искали</string>
    <string name="country">Страна</string>
    <string name="gender">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="time">Длительность</string>
    <string name="track_cover">Обложка трека</string>
    <string name="timebar_start">00:00</string>
    <string name="like_button">Нравится трек?</string>
    <string name="play_button">Послушать</string>
    <string name="playlist_button">Сохраним?</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="favorites_empty">Ваша медиатека пуста</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlists_empty">Вы не создали ни одного плейлиста</string>
    <string name="create">Создать</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="playlist_image_description">Картинка для плейлиста</string>
    <string name="playlist_image_not_selected">Картинка не выбрана</string>
    <string name="rationale_permission">Это разрешения необходимо для добавления картинки к плейлисту</string>
    <string name="playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="playlist_dialog_cancel">Отмена</string>
    <string name="playlist_dialog_confirm">Завершить</string>
    <string name="playlist_created">Плейлист "%s" создан</string>
    <string name="playlist_add">Добавить в плейлист</string>
    <string name="playlist_add_to_placeholder">XX треков</string>
    <string name="playlist_track_exists">Трек уже добавлен в плейлист "%s"</string>
    <string name="playlist_track_added">Добавлено в плейлист "%s"</string>
    <string name="playlist_empty">В плейлисте нет треков</string>
    <string name="playlist_no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="playlist_delete_message">Хотите удалить плейлист?</string>
    <string name="track_delete">Удалить трек</string>
    <string name="track_delete_from_playlist_message">Хотите удалить трек?</string>
    <string name="track_delete_confirm">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="moveon">Прослушать трек</string>
    <string name="dot">точка</string>

    <plurals name="track_counter">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="minutes_counter">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

</resources>