<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/value_16"
    tools:context="com.timchenko.playlistmaker.ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">

        <TextView
            style="@style/BackMenuStyleText"
            android:text="@string/settings" />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:text="@string/night_theme"
        android:layout_gravity="start"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_16"
        android:layout_marginStart="@dimen/value_16"
        android:layout_marginEnd="@dimen/value_12"
        android:layout_marginTop="40dp"
        app:thumbTint="@color/knob_color"
        app:trackTint="@color/tint_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/value_24"/>

    <TextView
        android:id="@+id/buttonShare"
        style="@style/settingsMenu"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/ic_share"
        android:drawableTint="@color/menu_icons" />

    <TextView
        android:id="@+id/buttonEmail"
        style="@style/settingsMenu"
        android:text="@string/contact_support"
        app:drawableEndCompat="@drawable/ic_contact"
        android:drawableTint="@color/menu_icons" />

    <TextView
        android:id="@+id/buttonEula"
        style="@style/settingsMenu"
        android:text="@string/eula"
        app:drawableEndCompat="@drawable/ic_forward"
        android:drawableTint="@color/menu_icons" />

</LinearLayout>