<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryVariant"
    android:paddingTop="@dimen/value_16">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/value_16"
        android:text="@string/main_header"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:background="?attr/colorPrimaryVariant"
        android:textSize="@dimen/text_22" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="@dimen/value_16"
        android:layout_marginBottom="32dp"
        android:background="?attr/colorPrimaryVariant"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_btn"
            style="@style/mainButtons"
            android:text="@string/search"
            app:icon="@drawable/ic_search"
            />

        <Button
            android:id="@+id/media_btn"
            style="@style/mainButtons"
            android:layout_marginTop="@dimen/value_16"
            android:text="@string/media"
            app:icon="@drawable/ic_media"
            />

        <Button
            android:id="@+id/settings_btn"
            style="@style/mainButtons"
            android:layout_marginTop="@dimen/value_16"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings"
            />
    </LinearLayout>
</LinearLayout>