<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trackRootLayout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp"
    android:gravity="center_vertical"
    >

    <ImageView
        android:id="@+id/trackCover"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/track_cover"
        android:src="@drawable/placeholderph"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/playlistAddName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_16"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_regular"
            tools:text="Track name"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/artistNameInList"
                style="@style/recyclerSecondaryText"
                android:layout_weight="1"
                tools:text="@string/track_description_placeholder"
                android:ellipsize="end" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_point"
                android:contentDescription="point"
                />
            <TextView
                android:id="@+id/timeInList"
                style="@style/recyclerSecondaryText"
                tools:text="@string/timebar_start" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/trackClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_forward"
        android:contentDescription="@string/moveon"
        app:tint="@color/menu_icons"
        />
</LinearLayout>