<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingTop="14dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/value_16"
            android:layout_height="@dimen/value_16"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/back"
            android:src="@drawable/arrow_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text_22" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        android:paddingStart="@dimen/value_16"
        android:paddingEnd="@dimen/value_16"
        android:paddingVertical="@dimen/value_21"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/night_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            />
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="16dp"
            android:gravity="end|center_vertical"
            />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/value_16"
        android:paddingEnd="@dimen/value_16"
        android:paddingVertical="@dimen/value_21"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            />
        <ImageView
            android:layout_width="18dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_share"
            android:layout_gravity="end" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/value_16"
        android:paddingEnd="@dimen/value_16"
        android:paddingVertical="@dimen/value_21"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/contact_support"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            />
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_contact"
            android:layout_gravity="end" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/value_16"
        android:paddingEnd="@dimen/value_16"
        android:paddingVertical="@dimen/value_21"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/eula"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            />
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_forward"
            android:layout_gravity="end" />
    </FrameLayout>
</LinearLayout>