<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.audioplayer.AudioPlayerActivity">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/playerFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/playerMainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back"
        style="@style/BackMenuStyleImg"
        android:contentDescription="@string/back"
        android:layout_marginStart="@dimen/value_16"
        android:layout_marginTop="@dimen/value_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/topBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="track"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topBorder"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="46dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="country, gender, year, album, time"
        app:barrierDirection="end" />

    <TextView
        android:id="@+id/country"
        style="@style/audioPlayerDescriptionText"
        android:layout_marginBottom="28dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBaseline_toBaselineOf="@id/countryVar"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintBottom_toBottomOf="parent" />
    <TextView
        android:id="@+id/countryVar"
        style="@style/audioPlayerDescriptionValues"
        android:layout_marginBottom="28dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textsBarrier"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="Artist Name that can be extremely long. However we will make the margins to be available."/>
    <TextView
        android:id="@+id/gender"
        style="@style/audioPlayerDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintBaseline_toBaselineOf="@id/genderVar"
        app:layout_constraintStart_toStartOf="@id/leftBorder" />
    <TextView
        android:id="@+id/genderVar"
        style="@style/audioPlayerDescriptionValues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textsBarrier"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintBottom_toTopOf="@+id/countryVar"
        tools:text="Artist Name that can be extremely long. However we will make the margins to be available." />
    <TextView
        android:id="@+id/year"
        style="@style/audioPlayerDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintBaseline_toBaselineOf="@id/yearVar"
        app:layout_constraintStart_toStartOf="@id/leftBorder" />
    <TextView
        android:id="@+id/yearVar"
        style="@style/audioPlayerDescriptionValues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textsBarrier"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintBottom_toTopOf="@+id/genderVar"
        tools:text="Artist Name that can be extremely long. However we will make the margins to be available." />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/albumGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="album, albumVar" />

    <TextView
        android:id="@+id/album"
        style="@style/audioPlayerDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        app:layout_constraintBaseline_toBaselineOf="@id/albumVar"
        app:layout_constraintStart_toStartOf="@id/leftBorder" />
    <TextView
        android:id="@+id/albumVar"
        style="@style/audioPlayerDescriptionValues"
        android:layout_width="0dp"
        android:contentDescription="@string/album"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textsBarrier"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintBottom_toTopOf="@+id/yearVar"
        tools:text="Artist Name that can be extremely long. However we will make the margins to be available." />
    <TextView
        android:id="@+id/time"
        style="@style/audioPlayerDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintBaseline_toBaselineOf="@id/timeVar"
        app:layout_constraintStart_toStartOf="@id/leftBorder" />

    <TextView
        android:id="@+id/timeVar"
        style="@style/audioPlayerDescriptionValues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/textsBarrier"
        app:layout_constraintBottom_toTopOf="@+id/albumVar"
        tools:text="Artist Name that can be extremely long. However we will make the margins to be available." />

    <TextView
        android:id="@+id/timeBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="14sp"
        android:text="@string/timebar_start"
        android:layout_marginBottom="39dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/time" />
    <ImageButton
        android:id="@+id/playBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/buttonplay"
        android:clickable="false"
        android:contentDescription="@string/play_button"
        android:background="@null"
        android:layout_marginBottom="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/timeBar"
        app:tint="?attr/colorOnPrimary" />

    <ImageButton
        android:id="@+id/addToPlayListBtn"
        style="@style/audioPlayerButtons"
        android:src="@drawable/buttonaddlist"
        android:contentDescription="@string/playlist_button"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/timeBar" />

    <ImageButton
        android:id="@+id/LikeBtn"
        style="@style/audioPlayerButtons"
        android:src="@drawable/buttonliken"
        android:contentDescription="@string/like_button"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/timeBar" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="14sp"
        android:layout_marginStart="@dimen/value_24"
        android:layout_marginEnd="@dimen/value_24"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/playBtn"
        tools:text="Artist Name that can be extremely long. However we will make the margins to be available."/>

    <TextView
        android:id="@+id/track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="22sp"
        android:layout_marginStart="@dimen/value_24"
        android:layout_marginEnd="@dimen/value_24"
        android:layout_marginBottom="@dimen/value_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/artist"
        tools:text="Track Name with the long text as well. May be it should be this." />

    <ImageView
        android:id="@+id/trackCover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="w,1:1"
        android:scaleType="centerCrop"
        android:contentDescription="@string/track_cover"
        android:src="@drawable/placeholderph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBorder"
        app:layout_constraintBottom_toTopOf="@+id/topBarrier"
        android:layout_marginStart="@dimen/value_24"
        android:layout_marginEnd="@dimen/value_24"
        android:layout_marginBottom="@dimen/value_24"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"
        />
<LinearLayout
    android:id="@+id/bottomSheetPlaylist"
    style="@style/BottomSheetLinearLayout">

    <View style="@style/BottomSheetHandle" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_marginTop="@dimen/value_12"
    android:layout_gravity="center"
    android:gravity="fill"
    android:textColor="?attr/colorOnPrimary"
    android:fontFamily="@font/ys_display_medium"
    android:textSize="19sp"
    android:text="@string/playlist_add"
    />

    <Button
        android:id="@+id/buttonNewPlaylist"
        style="@style/smallButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/new_playlist"
        android:layout_marginTop="@dimen/value_16"
        android:layout_marginBottom="@dimen/value_24"
        />

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerPlaylistsInPLayer"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    />

</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>